Hide global variable for signal ID in gdbusproxy.c.

Also a similar fix for gdbusserver.c.

https://bugzilla.gnome.org/show_bug.cgi?id=670721